projects/vb6parse/snapshots/parsers/cst/library/string/trim/trim_textbox.snap
---
source: projects/vb6parse/tests/library/string/trim.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: txtUsername
            - kind: PeriodOperator
              text: "."
            - kind: TextKeyword
              text: Text
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Trim
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: Identifier
                          text: txtUsername
                        - kind: PeriodOperator
                          text: "."
                        - kind: TextKeyword
                          text: Text
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
